src/test/ui/issue-15756.stderr
error[E0277]: the size for values of type `[T]` cannot be known at compilation time
  --> $DIR/issue-15756.rs:17:10
   |
LL |     &mut something
   |          ^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[T]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: all local variables must have a statically known size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
